@@ -10,11 +10,16 @@
 
 \alias{[<-,RasterLayer-method}
 
-\title{Get or replace values of Raster objects}
+\title{Extract or replace cell values of a Raster object}
 
 \description{
+These are shorthand methods that call other methods that should normally be used, such as \code{\link{getValues}, \link{extract}, \link{crop}, \link{rasterize}}. 
 
-\code{object[i]} can be used to access values of a Raster* object, using cell numbers. You can also use row and column numbers as index, using \code{object[i,j]} or \code{object[i,]} or \code{object[,j]}. In addition you can supply a SpatialPolygons, SpatialLines or SpatialPoints object (as in \code{link{extract}}. If you supply a RasterLayer, its values will be used as logical (TRUE/FALSE) indices if both Raster objects have the same extent and resolution; otherwise the cell values within the extent of the RasterLayer are returned.
+\code{object[i]} can be used to access values of a Raster* object, using cell numbers. You can also use row and column numbers as index, using \code{object[i,j]} or \code{object[i,]} or \code{object[,j]}. In addition you can supply a SpatialPolygons, SpatialLines or SpatialPoints object. 
+
+If \code{drop=TRUE} (the default) cell values are returned (a vector for a RasterLayer, a matrix for a RasterStack or RasterBrick). If \code{drop=FALSE} a Raster* object is returned that has the extent covering the requested cells, and with all other non-requested cells within this extent set to \code{NA}.
+
+If you supply a RasterLayer, its values will be used as logical (TRUE/FALSE) indices if both Raster objects have the same extent and resolution; otherwise the cell values within the extent of the RasterLayer are returned.
 
 You can also set values of a RasterLayer object, when \code{i} is a vector of cell numbers or a Spatial* object. 
 
@@ -23,7 +28,7 @@ Double brackes '[[ ]]' can be used to extract one or more layers from a multi-la
 
 \section{Methods}{
 \describe{
-\bold{Either get values}
+\bold{Get values}
 
 \code{x[i]}
 \code{x[i,j]}
@@ -33,9 +38,10 @@ Arguments
 \tab \code{x} \tab a Raster* object \cr
 \tab \code{i} \tab cell number(s), row number(s), a (logical) RasterLayer, Spatial* object \cr
 \tab \code{j} \tab column number(s) (only available if i is (are) a row number(s)) \cr
+\tab \code{drop} \tab If \code{TRUE}, cell values are returned. Otherwise, a Raster* object is returned \cr
 }
 
-\bold{Or set values}
+\bold{Set values}
 
 \code{x[i] <- value}
 \code{x[i,j] <- value}
@@ -51,7 +57,7 @@ Arguments
 
 }}
 
-\seealso{ \code{\link{getValues}, \link{setValues}, \link{extract}} }
+\seealso{ \code{\link{getValues}, \link{setValues}, \link{extract}, \link{crop}, \link{rasterize}} }
 
 
 \examples{
